[tool.poetry]
name = "smart-meter-reader"
version = "0.1.0"
description = "A pipeline for AI-based meter reading recognition."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
torch = "^2.0.0"
opencv-python-headless = "^4.5.5.64"
easyocr = "^1.6.2"
pyqt5 = "^5.15.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
